@@ -52,6 +52,10 @@ ifdef WITH_FIXMES
 CFLAGS += -DWITH_FIXMES
 endif
 
+ifdef WITH_MAEMO
+CFLAGS += -DWITH_MAEMO
+endif
+
 ifdef WITH_SOUND_DEBUG
 CFLAGS += -DWITH_SOUND_DEBUG
 endif
